<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="ru.android.zheka.vm.ISettingsVM"
            />
<!--        <variable-->
<!--            name="model"-->
<!--            type="ru.android.zheka.model.ISettingsModel"-->
<!--            />-->
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/update_text"
            android:textSize="8pt"
            android:checked="@={vm.model.updateLen()}"
            android:onCheckedChanged="@{(switch,checked)->vm.switchUpdateLen(checked)}"
            />
        <TextView
            android:id="@+id/radioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/optimization_text"/>
        <RadioGroup
            android:id="@+id/optimizationRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/optimizationNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optimizationuser1"
                android:checked="@={vm.model.optimizationNo()}"
                android:onClick="@{()->vm.optimizationNo()}"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/optimizationGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optimizationuser2"
                android:checked="@={vm.model.optimizationGoogle()}"
                android:onClick="@{()->vm.optimizationGoogle()}"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/optimizationBellmanFord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optimizationuser3"
                android:checked="@={vm.model.optimizationBellmanFord()}"
                android:onClick="@{()->vm.optimizationBellmanFord()}"/>
        </RadioGroup>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/head1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/segmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="8pt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/segment_text"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/speedSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/speedList"
                android:layout_weight="0"
                android:onItemSelected="@{(a, b, c, d) -> vm.model.getSpinner().onItemSelected(a, b, c, d)}"
                android:adapter="@{vm.model.getSpinner().getSpinnerAdapter()}"
                android:selectedItemPosition="@={vm.model.getSpeedTrace()}"
                >
            </Spinner>
        </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/travelmodelabel"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timerlabel"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/lists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/list"
                    android:name="ru.android.zheka.gmapexample1.TravelModeFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adapter="@{vm.model.getSpinnerTravel().getSpinnerAdapter()}"
                    android:onItemSelected="@{(a, b, c, d) -> vm.model.getSpinnerTravel().onItemSelected(a, b, c, d)}"
                    android:selectedItemPosition="@={vm.model.getPosTravel()}" />

                <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/list1"
                    android:name="ru.android.zheka.gmapexample1.TimerFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adapter="@{vm.model.getSpinnerTimer().getSpinnerAdapter()}"
                    android:onItemSelected="@{(a, b, c, d) -> vm.model.getSpinnerTimer().onItemSelected(a, b, c, d)}"
                    android:selectedItemPosition="@={vm.model.getPosTimer()}" />
            </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/avoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/avoid_text"
            android:textSize="8pt"
            android:checked="@={vm.model.getAvoid()}"
            android:onCheckedChanged="@{(switch,checked)->vm.switchIgnorePaidRoads(checked)}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/avoidHighWays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/avoid_high_roads_text"
            android:textSize="8pt"
            android:checked="@={vm.model.getAvoidHighWays()}"
            android:onCheckedChanged="@{(switch,checked)->vm.switchIgnoreHighWays(checked)}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/avoidInDoor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/avoid_in_doors_text"
            android:textSize="8pt"
            android:checked="@={vm.model.getAvoidInDoor()}"
            android:onCheckedChanged="@{(switch,checked)->vm.switchIgnoreInDoors(checked)}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/offline_text"
            android:textSize="8pt"
            android:checked="@={vm.model.getOffline()}"
            android:onCheckedChanged="@{(switch,checked)->vm.switchOffline(checked)}"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>