<?xml version="1.0" encoding="utf-8"?>
<!-- Do not try use ScrollView  -->
<!-- ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"-->
      <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container"
            android:orientation="vertical" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <WebView xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/webViewSettings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <Switch
	        android:id="@+id/update"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/update_text"
	        android:textSize="8pt" />
	     <Switch
	        android:id="@+id/optimization"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/optimization_text"
	        android:textSize="8pt"/>
	     <Switch
	        android:id="@+id/avoid"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/avoid_text"
	        android:textSize="8pt"/>
	     <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/head"
            android:orientation="horizontal" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"> 
		     <TextView android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	            android:id="@+id/text"
	            android:text="@string/travelmodelabel"
	            android:textSize="8pt"
	            android:layout_weight="1"/>
	    	 <TextView android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	            android:id="@+id/text1"
	            android:text="@string/timerlabel"
	            android:textSize="8pt"
	            android:layout_weight="1"/>
           </LinearLayout>
           <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:id="@+id/lists"
	            android:orientation="horizontal" 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
				<fragment xmlns:android="http://schemas.android.com/apk/res/android"
				    xmlns:tools="http://schemas.android.com/tools"
				    android:id="@+id/list"
				    android:name="ru.android.zheka.gmapexample1.TravelModeFragment"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="1" />
				
				<fragment xmlns:android="http://schemas.android.com/apk/res/android"
				    xmlns:tools="http://schemas.android.com/tools"
				    android:id="@+id/list1"
				    android:name="ru.android.zheka.gmapexample1.TimerFragment"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"/>
		      </LinearLayout>				    
      </LinearLayout>
 <!-- /ScrollView-->